support filter for exclusively new questions

--- a/betterSAT.ipynb
+++ b/betterSAT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,17 @@
     "# 1 -> grade \n",
     "\n",
     "# modify\n",
-    "student_name = 'guillermo'\n",
-    "mode = 1\n",
-    "section = 'conventions'\n",
-    "set_number = 1\n",
-    "wrong = False"
+    "student_name = 'gianmarco'\n",
+    "mode = 0\n",
+    "section = 'algebra'\n",
+    "set_number = 1.1\n",
+    "wrong = False\n",
+    "new = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,149 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "333b2b65, C\n",
-      "6fece68e, C\n",
-      "59e41600, A\n",
-      "97b62fab, C\n",
-      "f2eaaf5d, C\n",
-      "175df826, C\n",
-      "c21df211, D\n",
-      "588887b9, D\n",
-      "7b419faf, B\n",
-      "ec08463d, D\n",
-      "96499989, A\n",
-      "aab78b25, D\n",
-      "e15c50b2, C\n",
-      "42cc9236, D\n",
-      "4a90a978, A\n",
-      "81ac953e, C\n",
-      "603755a5, A\n",
-      "de55ec71, A\n",
-      "ea8f4658, B\n",
-      "577b09fa, B\n",
-      "db4e3819, D\n",
-      "b35cefb7, B\n",
-      "b260c65a, A\n",
-      "89ab0d46, C\n",
-      "856b495d, A\n",
-      "be34a3df, D\n",
-      "a30567fd, A\n",
-      "db2e480a, A\n",
-      "870ae7ec, B\n",
-      "8f6d6ae6, C\n",
-      "6b49f5f1, B\n",
-      "c04e9136, B\n",
-      "fe41f258, A\n",
-      "403d7bb5, A\n",
-      "083a35dc, D\n",
-      "c8540a5b, C\n",
-      "67614549, D\n",
-      "7f48b098, B\n",
-      "a427a52c, D\n",
-      "74ce2f05, D\n",
-      "548f4956, A\n",
-      "2c84f96a, D\n",
-      "61160f0a, A\n",
-      "594b4a94, B\n",
-      "6d4b2e1e, C\n",
-      "f0864217, A\n",
-      "6ea8c23f, A\n",
-      "50801257, A\n",
-      "109d5bbb, C\n",
-      "0fa289a7, B\n",
-      "de3dd17d, D\n",
-      "5b8f9cf2, D\n",
-      "adf210e7, D\n",
-      "dc645172, C\n",
-      "0fe5ce68, C\n",
-      "3bceeb93, D\n",
-      "dab8b8ee, D\n",
-      "a14eef71, D\n",
-      "2bb7416a, B\n",
-      "f868d438, C\n",
-      "\n",
-      "Correct:\n",
-      "Question #1 (ID: 333b2b65): Correct\n",
-      "Question #3 (ID: 59e41600): Correct\n",
-      "Question #4 (ID: 97b62fab): Correct\n",
-      "Question #6 (ID: 175df826): Correct\n",
-      "Question #7 (ID: c21df211): Correct\n",
-      "Question #8 (ID: 588887b9): Correct\n",
-      "Question #9 (ID: 7b419faf): Correct\n",
-      "Question #10 (ID: ec08463d): Correct\n",
-      "Question #11 (ID: 96499989): Correct\n",
-      "Question #12 (ID: aab78b25): Correct\n",
-      "Question #14 (ID: 42cc9236): Correct\n",
-      "Question #15 (ID: 4a90a978): Correct\n",
-      "Question #16 (ID: 81ac953e): Correct\n",
-      "Question #17 (ID: 603755a5): Correct\n",
-      "Question #18 (ID: de55ec71): Correct\n",
-      "Question #19 (ID: ea8f4658): Correct\n",
-      "Question #20 (ID: 577b09fa): Correct\n",
-      "Question #21 (ID: db4e3819): Correct\n",
-      "Question #22 (ID: b35cefb7): Correct\n",
-      "Question #23 (ID: b260c65a): Correct\n",
-      "Question #24 (ID: 89ab0d46): Correct\n",
-      "Question #25 (ID: 856b495d): Correct\n",
-      "Question #26 (ID: be34a3df): Correct\n",
-      "Question #28 (ID: db2e480a): Correct\n",
-      "Question #29 (ID: 870ae7ec): Correct\n",
-      "Question #30 (ID: 8f6d6ae6): Correct\n",
-      "Question #31 (ID: 6b49f5f1): Correct\n",
-      "Question #33 (ID: fe41f258): Correct\n",
-      "Question #35 (ID: 083a35dc): Correct\n",
-      "Question #36 (ID: c8540a5b): Correct\n",
-      "Question #37 (ID: 67614549): Correct\n",
-      "Question #40 (ID: 74ce2f05): Correct\n",
-      "Question #42 (ID: 2c84f96a): Correct\n",
-      "Question #44 (ID: 594b4a94): Correct\n",
-      "Question #46 (ID: f0864217): Correct\n",
-      "Question #48 (ID: 50801257): Correct\n",
-      "Question #51 (ID: de3dd17d): Correct\n",
-      "Question #53 (ID: adf210e7): Correct\n",
-      "Question #58 (ID: a14eef71): Correct\n",
-      "Question #60 (ID: f868d438): Correct\n",
-      "\n",
-      "Incorrect:\n",
-      "Question #2 (ID: 6fece68e): Incorrect (D)\n",
-      "Question #5 (ID: f2eaaf5d): Incorrect (A)\n",
-      "Question #13 (ID: e15c50b2): Incorrect (B)\n",
-      "Question #27 (ID: a30567fd): Incorrect (C)\n",
-      "Question #32 (ID: c04e9136): Incorrect (D)\n",
-      "Question #34 (ID: 403d7bb5): Incorrect (D)\n",
-      "Question #38 (ID: 7f48b098): Incorrect (C)\n",
-      "Question #39 (ID: a427a52c): Incorrect (C)\n",
-      "Question #41 (ID: 548f4956): Incorrect (C)\n",
-      "Question #43 (ID: 61160f0a): Incorrect (D)\n",
-      "Question #45 (ID: 6d4b2e1e): Incorrect (D)\n",
-      "Question #47 (ID: 6ea8c23f): Incorrect (D)\n",
-      "Question #49 (ID: 109d5bbb): Incorrect (B)\n",
-      "Question #50 (ID: 0fa289a7): Incorrect (D)\n",
-      "Question #52 (ID: 5b8f9cf2): Incorrect (B)\n",
-      "Question #54 (ID: dc645172): Incorrect (D)\n",
-      "Question #55 (ID: 0fe5ce68): Incorrect (A)\n",
-      "Question #56 (ID: 3bceeb93): Incorrect (C)\n",
-      "Question #57 (ID: dab8b8ee): Incorrect (C)\n",
-      "Question #59 (ID: 2bb7416a): Incorrect (D)\n",
-      "\n",
-      "Answer Not found:\n",
-      "\n",
-      "ID Not found:\n",
-      "\n",
-      "Total Correct: 40\n",
-      "Total Incorrect: 20\n",
-      "Total Not Found: 0\n",
-      "Wrong questions PDF generated: ./student_files/guillermo/english/conventions/wrong/conventions_1_guillermo_wrong_questions.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "verbose = True\n",
     "if mode == 1:\n",
@@ -318,9 +179,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Available = 235\n",
+      "Easy Pages: Available = 95, Selected = 0\n",
+      "Medium Pages: Available = 82, Selected = 0\n",
+      "Hard Pages: Available = 58, Selected = 0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student PDF created at: ./student_files/renato/math/problems/problems_1.1_renato.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "if mode == 0:\n",
     "\n",
@@ -349,11 +228,26 @@
     "        return selected\n",
     "\n",
     "    def save_selected_pages(filename, selected_pages):\n",
+    "        \"\"\"Update the history file without overwriting existing selections.\"\"\"\n",
+    "        if os.path.exists(filename):\n",
+    "            # Load existing history and merge with new selections\n",
+    "            with open(filename, 'r') as file:\n",
+    "                existing_data = json.load(file)\n",
+    "        else:\n",
+    "            existing_data = {\"easy\": [], \"medium\": [], \"hard\": []}\n",
+    "\n",
+    "        # Merge the new pages with the existing ones, avoiding duplicates\n",
+    "        for difficulty in [\"easy\", \"medium\", \"hard\"]:\n",
+    "            existing_data[difficulty] = list(\n",
+    "                set(existing_data.get(difficulty, [])).union(set(selected_pages[difficulty]))\n",
+    "            )\n",
+    "\n",
+    "        # Save the updated history\n",
     "        with open(filename, 'w') as file:\n",
-    "            json.dump(selected_pages, file, indent=4)\n",
+    "            json.dump(existing_data, file, indent=4)\n",
     "\n",
     "    def load_selected_pages(filename):\n",
-    "        if os.path.exists(filename):\n",
+    "        if os.path.exists(filename) and new is True:\n",
     "            with open(filename, 'r') as file:\n",
     "                return json.load(file)\n",
     "        return {\"easy\": [], \"medium\": [], \"hard\": []}\n",
